# inEKF

./: CMakeLists.txt  README.md  package.xml
config/mini_cheetah/: imu_propagation.yaml  inekf_estimator.yaml  ros_comm.yaml
config/template/: ros_comm.yaml
examples/: mini_cheetah.cpp
include/communication/: ros_subscriber.h
src/communication/: ros_publisher.cpp  ros_subscriber.cpp
