<package format="2">
  <name>drift</name>
  <version>1.0.0</version>
  <description>DRIFT ROS1 Wrapper</description>
  <maintainer email="hxy@todo.todo">hxy</maintainer>
  <author>Justin Yu, Justin Lin, Tingjun Li</author>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

</package>